# VscodeQt

ProjectGlory/: CMakeLists.txt  main.cpp
ProjectGlory/custom/: TableViewBase.cpp  TableViewBase.h  TableViewPrint.cpp  TableViewPrint.h  TableViewSql.cpp  TableViewSql.h
ProjectGlory/custom/tableview/: TableViewBase.h  TableViewSql.cpp  TableViewSql.h
ProjectGlory/include/: TableViewPrint.h  TaskTcpClient.h  mainwindow.h
ProjectGlory/source/: TableViewPrint.cpp  TaskTcpClient.cpp  mainwindow.cpp
ProjectGlory/subanalyzesqlite/: CMakeLists.txt
ProjectGlory/subanalyzesqlite/include/: AnalyzeSqlite.h
ProjectGlory/subanalyzesqlite/src/: AnalyzeSqlite.cpp
ProjectGlory/subdevice/: CMakeLists.txt
ProjectGlory/subdevice/include/: device.h
ProjectGlory/subdevice/src/: device.cpp
ProjectGlory/sublibrary1/: CMakeLists.txt
ProjectGlory/subthreadpool/: CMakeLists.txt
ProjectGlory/subthreadpool/include/: Thread.h  ThreadManager.h  threadpool.h
ProjectGlory/subthreadpool/src/: Thread.cpp  ThreadManager.cpp  threadpool.cpp
ProjectGlory/ui/: mainwindow.ui
idl/: PublicType.pb.cc  PublicType.pb.h  PublicType.proto  pb.bat
include/quazip/: JlCompress.h
include/tableview/: TableViewBase.cpp
src/ProjectAlarmQml/: CMakeLists.txt  main.cpp  main.qml
src/ProjectAlarmQml/qrc/: ProjectAlarmQml.qrc
src/ProjectAlarmQml/qrc/resources/: ClickedableHelloworld.qml  TestCase.qml  TestJavascript.qml  appwindow.qml  main.qml  myscript.js  qtquickcontrols2.conf
src/ProjectGlory/: CMakeLists.txt  main.cpp
src/ProjectGlory/include/: TaskMpi.h  TaskTcpClient.h  mainwindow.h
src/ProjectGlory/protobuf/: PublicType.pb.cc  PublicType.pb.h
src/ProjectGlory/public/: public.cpp  public.h
src/ProjectGlory/qrc/: MyResource.qrc
src/ProjectGlory/source/: TaskMpi.cpp  TaskTcpClient.cpp  mainwindow.cpp
src/ProjectGlory/subanalyzesqlite/include/: AnalyzeSqlite.h
src/ProjectGlory/subanalyzesqlite/src/: AnalyzeSqlite.cpp
src/ProjectGlory/subdevice/: CMakeLists.txt
src/ProjectGlory/subdevice/src/: device.cpp
src/ProjectGlory/subthreadpool/: CMakeLists.txt
src/ProjectGlory/subthreadpool/include/: ThreadManager.h
src/ProjectGlory/subthreadpool/src/: Thread.cpp
src/ProjectGlory/subziptool/: CMakeLists.txt
src/ProjectGlory/subziptool/include/: ziptool.h
src/ProjectGlory/subziptool/src/: ziptool.cpp
src/ProjectGlory/ui/: mainwindow.ui
